test/sematest/invalid/inline_assignment.java
class A {
  public static void main(String[] args) {
    int a = 0;
    int b = (a = 0);
  }
}